--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
