--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
+    "@okta/okta-angular": "^6.3.0",
+    "@okta/okta-auth-js": "^6.9.0",
+    "@okta/okta-signin-widget": "^6.2.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "4.4.1",
     "rxjs": "~7.8.0",
+    "stripe": "^8.179.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
